--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                   class="market-grid__cell"
                   style="background-image:url(https://images.unsplash.com/photo-1484301548518-d0e0a5db0fc8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80)"
                >
-                  <header class="market__title">Rent 5 Bedroom House</header>
+                  <header class="market__title">Let 5 Bedroom House</header>
 
                   <footer class="market__footer">
                      <span class="footer-info"> <strong>admin</strong> 1 January 2019</span>
@@ -147,7 +147,7 @@
                   class="market-grid__cell"
                   style="background-image:url(https://images.unsplash.com/photo-1484301548518-d0e0a5db0fc8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80)"
                >
-                  <header class="market__title">Rent 3 Bedroom House</header>
+                  <header class="market__title">Let 3 Bedroom House</header>
                   <footer class="market__footer">
                      <span class="footer-info"> <strong>admin</strong> 1 January 2019</span>
                   </footer>
@@ -156,7 +156,7 @@
                   class="market-grid__cell"
                   style="background-image:url(https://images.unsplash.com/photo-1542046480253-c0f854c2b8a6?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80)"
                >
-                  <header class="market__title">Rent 1 bedroom flat</header>
+                  <header class="market__title">Let 1 bedroom flat</header>
                   <footer class="market__footer">
                      <span class="footer-info"> <strong>admin</strong> 1 January 2019</span>
                   </footer>
@@ -165,7 +165,7 @@
                   class="market-grid__cell"
                   style="background-image:url(https://images.unsplash.com/photo-1473662423067-e88544ee8418?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80)"
                >
-                  <header class="market__title">Rent 1 bedroom flat</header>
+                  <header class="market__title">Let 1 bedroom flat</header>
                   <footer class="market__footer">
                      <span class="footer-info"> <strong>admin</strong> 1 January 2019</span>
                   </footer>
@@ -176,15 +176,6 @@
 
       <section class="contact">
          <div class="map-address">
-            <!-- <div class="popup-map"><iframe
-               class="map"
-               src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9925.146045957445!2d-0.1750788!3d51.5446451!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xff42a667a49e0123!2sBlane+Rosen+%26+Co!5e0!3m2!1sen!2suk!4v1552156696656"
-               width="600"
-               height="450"
-               frameborder="0"
-               style="border:0"
-               allowfullscreen
-            ></iframe></div> -->
             <div class="references">
                <a href="https://www.tpos.co.uk/members/client-money-protection"> <img src="http://www.blanerosen.com/images/picmp.jpg" alt="graphics image"/></a>
                <a href="https://www.tpos.co.uk/members/client-money-protection">
@@ -217,7 +208,21 @@
 
                <span class="footer__item">
                   <h3>Contact Us</h3>
-                  <a href="" class="open-map"> <i class="fa fa-map-marker"></i>View Map </a>
+                  <div class="open-map">
+                     <i class="fa fa-map-marker"></i>View Map
+                     <div class="popup-map">
+                        <i class="fa fa-times"></i>
+                        <iframe
+                           class="map"
+                           src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9925.146045957445!2d-0.1750788!3d51.5446451!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xff42a667a49e0123!2sBlane+Rosen+%26+Co!5e0!3m2!1sen!2suk!4v1552156696656"
+                           width="600"
+                           height="450"
+                           frameborder="0"
+                           style="border:0"
+                           allowfullscreen
+                        ></iframe>
+                     </div>
+                  </div>
                   <a href="tel: 020 7586 7051"> <i class="fa fa-phone"></i> 020 7586 7051</a>
                   <a href="mailto:property@blanerosen.com"> <i class="fa fa-envelope"></i>property@blanerosen.com</a>
                </span>
