--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
          </div>
       </section>
 
-      <section class="contact">
-         <div class="map-address">
+      <footer class="footer-contact">
+         <div class="footer-contact__item">
             <div class="references">
                <a href="https://www.tpos.co.uk/members/client-money-protection"> <img src="http://www.blanerosen.com/images/picmp.jpg" alt="graphics image"/></a>
                <a href="https://www.tpos.co.uk/members/client-money-protection">
@@ -228,8 +228,7 @@
                </span>
             </div>
          </div>
-      </section>
-      <footer class="fotter"></footer>
+      </footer>
 
       <script src="/js/handlers.js"></script>
    </body>
